# serializer version: 1
# name: test_delete_cli
  '''
  Delivery summary:
  
  	delivery_id: 20120114T120001-product1-2824
  	pushing_entity_id: GLO-MERCATOR-TOULOUSE-FR
  	product_id: product1
  	dataset_id: dataset1
  
  The following delete operation have been submitted:
  
  	[DELETE] tests/resources/file1.txt
  	[DELETE] tests/resources/file2.txt
  
  Total: 0 file uploaded, 2 file to delete.
  '''
# ---
# name: test_delete_cli_save_delivery_json
  '''
  Delivery summary:
  
  	delivery_id: 20120114T120001-product1-2824
  	pushing_entity_id: GLO-MERCATOR-TOULOUSE-FR
  	product_id: product1
  	dataset_id: dataset1
  
  The following delete operation have been submitted:
  
  	[DELETE] tests/resources/file1.txt
  	[DELETE] tests/resources/file2.txt
  
  Total: 0 file uploaded, 2 file to delete.
  '''
# ---
# name: test_delete_cli_save_delivery_json.1
  dict({
    'dataset_id': 'dataset1',
    'delivery_id': '20120114T120001-product1-2824',
    'error_message': None,
    'operations': list([
      dict({
        'files': list([
          dict({
            'error_message': None,
            'key_suffix': 'tests/resources/file1.txt',
          }),
          dict({
            'error_message': None,
            'key_suffix': 'tests/resources/file2.txt',
          }),
        ]),
        'operation': 'delete',
      }),
    ]),
    'product_id': 'product1',
    'pushing_entity_id': 'GLO-MERCATOR-TOULOUSE-FR',
    'status': 'pending',
    'status_timestamp': None,
  })
# ---
# name: test_delete_python_interface
  '''
  {
    "delivery_id": "20120114T120001-product1-2824",
    "fatal_error": null,
    "files_to_delete": [
      {
        "key_suffix": "tests/resources/file1.txt",
        "error_message": null
      },
      {
        "key_suffix": "tests/resources/file2.txt",
        "error_message": null
      }
    ]
  }
  '''
# ---
# name: test_delete_python_interface.1
  '''
  {
    "delivery_id": "20120114T120001-product1-2824",
    "pushing_entity_id": "GLO-MERCATOR-TOULOUSE-FR",
    "product_id": "product1",
    "dataset_id": "dataset1",
    "operations": [
      {
        "operation": "delete",
        "files": [
          {
            "key_suffix": "tests/resources/file1.txt",
            "error_message": null
          },
          {
            "key_suffix": "tests/resources/file2.txt",
            "error_message": null
          }
        ]
      }
    ],
    "status": "pending",
    "status_timestamp": null,
    "error_message": null
  }
  '''
# ---
